Updated Slovak translation using Weblate
Currently translated at 0.4% (1 of 227 strings)

Updated Arabic translation using Weblate

Currently translated at 95.1% (216 of 227 strings)

Updated Bulgarian translation using Weblate

Currently translated at 0.4% (1 of 227 strings)

Updated Hungarian translation using Weblate

Currently translated at 92.0% (209 of 227 strings)

Updated Dutch translation using Weblate

Currently translated at 95.1% (216 of 227 strings)

Updated Persian translation using Weblate

Currently translated at 46.6% (106 of 227 strings)

Updated Ukrainian translation using Weblate

Currently translated at 100.0% (227 of 227 strings)

Updated Slovenian translation using Weblate

Currently translated at 0.4% (1 of 227 strings)

Updated Thai translation using Weblate

Currently translated at 84.1% (191 of 227 strings)

Updated Tamil translation using Weblate

Currently translated at 59.0% (134 of 227 strings)

Updated Vietnamese translation using Weblate

Currently translated at 92.0% (209 of 227 strings)

Updated Portuguese (Portugal) translation using Weblate

Currently translated at 92.0% (209 of 227 strings)

Updated Malayalam translation using Weblate

Currently translated at 61.2% (139 of 227 strings)

Updated Esperanto translation using Weblate

Currently translated at 37.4% (85 of 227 strings)

Updated Turkish translation using Weblate

Currently translated at 100.0% (227 of 227 strings)

Updated Swedish translation using Weblate

Currently translated at 100.0% (227 of 227 strings)

Updated Russian translation using Weblate

Currently translated at 90.7% (206 of 227 strings)

Updated Portuguese (Brazil) translation using Weblate

Currently translated at 97.3% (221 of 227 strings)

Updated Polish translation using Weblate

Currently translated at 100.0% (227 of 227 strings)

Updated Japanese translation using Weblate

Currently translated at 100.0% (227 of 227 strings)

Updated Italian translation using Weblate

Currently translated at 100.0% 

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -215,4 +215,5 @@
     <string name="recently_read_adjective">قرأت مؤخرا</string>
     <string name="read_adjective">مقروء</string>
     <string name="saved_adjective">محفوظ</string>
+    <string name="theme_e_ink">ورق إلكتروني</string>
 </resources>
