--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -226,4 +226,5 @@
     <string name="failed_to_parse_full_article">Artikel konnte nicht vollständig analysiert werden</string>
     <string name="failed_to_parse_json_feed">JSON-Feed konnte nicht analysiert werden</string>
     <string name="failed_to_parse_rss_feed">RSS-Feed konnte nicht analysiert werden</string>
+    <string name="theme_e_ink">E-Papier</string>
 </resources>
