--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -226,4 +226,5 @@
     <string name="unsupported_content_type">Ei-tuettu sisältötyyppi</string>
     <string name="failed_to_parse_full_article">Koko artikkelin jäsentäminen epäonnistui</string>
     <string name="no_url">Ei URL:ää</string>
+    <string name="theme_e_ink">Sähkömuste</string>
 </resources>
