--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -226,4 +226,5 @@
     <string name="no_body_in_response">回答はありません</string>
     <string name="unsupported_content_type">未対応のコンテンツタイプ</string>
     <string name="failed_to_parse_full_article">記事全体の解析に失敗しました</string>
+    <string name="theme_e_ink">電子ペーパー</string>
 </resources>
