--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -225,4 +225,5 @@
     <string name="unsupported_content_type">Nepodporovaný typ obsahu</string>
     <string name="failed_to_parse_full_article">Nepodařilo se zpracovat celý článek</string>
     <string name="no_url">Žádná URL adresa</string>
+    <string name="theme_e_ink">E-papír</string>
 </resources>
