--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -226,4 +226,5 @@
     <string name="unsupported_content_type">Tipo de contenido no soportado</string>
     <string name="failed_to_parse_full_article">Fallo al analizar el artículo completo</string>
     <string name="no_url">No hay URL</string>
+    <string name="theme_e_ink">Tinta electrónica</string>
 </resources>
