--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -213,4 +213,5 @@
     <string name="saved_adjective">Disimpan</string>
     <string name="show_only_title">Hanya tampilkan judul</string>
     <string name="article_list_settings">Daftar artikel</string>
+    <string name="theme_e_ink">Kertas elektronik</string>
 </resources>
