--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -226,5 +226,5 @@
     <string name="failed_to_parse_json_feed">Nie udało się przetworzyć kanału JSON</string>
     <string name="failed_to_parse_full_article">Nie udało się przetworzyć całego artykułu</string>
     <string name="no_url">Brak adresu URL</string>
-    <string name="theme_e_ink">E Ink</string>
+    <string name="theme_e_ink">Papier elektroniczny</string>
 </resources>
