--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -227,4 +227,5 @@
     <string name="failed_to_parse_full_article">Kund inte läsa hela artikeln</string>
     <string name="no_url">Ingen URL</string>
     <string name="theme_e_ink">Läsplatta</string>
+    <string name="add_anyway">Lägg till ändå</string>
 </resources>
