--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -240,4 +240,5 @@
   <string name="unsupported_content_type">Unsupported content type</string>
   <string name="failed_to_parse_full_article">Failed to parse full article</string>
   <string name="no_url">No URL</string>
+  <string name="add_anyway">Add anyway</string>
 </resources>
