Updated Spanish translation using Weblate
Currently translated at 100.0% (228 of 228 strings)

Co-authored-by: El Pirujo <boina@disroot.org>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/es/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -227,4 +227,5 @@
     <string name="failed_to_parse_full_article">Fallo al analizar el artículo completo</string>
     <string name="no_url">No hay URL</string>
     <string name="theme_e_ink">Tinta electrónica</string>
+    <string name="add_anyway">Agregar de todos modos</string>
 </resources>
