--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -227,4 +227,5 @@
     <string name="failed_to_parse_full_article">Nie udało się przetworzyć całego artykułu</string>
     <string name="no_url">Brak adresu URL</string>
     <string name="theme_e_ink">E Ink</string>
+    <string name="add_anyway">Dodaj mimo to</string>
 </resources>
