Updated Turkish translation using Weblate
Currently translated at 100.0% (228 of 228 strings)

Co-authored-by: Oğuz Ersen <oguz@ersen.moe>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/tr/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -227,4 +227,5 @@
     <string name="no_url">URL yok</string>
     <string name="theme_e_ink">E-kâğıt</string>
     <string name="failed_to_download">İndirilemedi</string>
+    <string name="add_anyway">Yine de ekle</string>
 </resources>
