--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -228,4 +228,5 @@
     <string name="no_url">Ingen URL</string>
     <string name="theme_e_ink">Läsplatta</string>
     <string name="add_anyway">Lägg till ändå</string>
+    <string name="open_browser_in_split_screen">Öppna webbläsare i delad skärm</string>
 </resources>
