--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -228,4 +228,5 @@
     <string name="no_url">Brak adresu URL</string>
     <string name="theme_e_ink">E Ink</string>
     <string name="add_anyway">Dodaj mimo to</string>
+    <string name="open_browser_in_split_screen">Otwieraj przeglądarkę na podzielonym ekranie</string>
 </resources>
