Updated Greek translation using Weblate
Currently translated at 100.0% (229 of 229 strings)

Co-authored-by: Retrial <giwrgosmant@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/el/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -228,4 +228,5 @@
     <string name="no_url">Χωρίς URL</string>
     <string name="theme_e_ink">Ηλεκτρονικός σύνδεσμος</string>
     <string name="add_anyway">Προσθήκη όπως και να χει</string>
+    <string name="open_browser_in_split_screen">Ανοίξτε το πρόγραμμα περιήγησης σε διαιρεμένη οθόνη</string>
 </resources>
