Updated Italian translation using Weblate
Currently translated at 100.0% (229 of 229 strings)

Updated French translation using Weblate

Currently translated at 100.0% (229 of 229 strings)

Updated German translation using Weblate

Currently translated at 100.0% (229 of 229 strings)

Co-authored-by: J. Lavoie <j.lavoie@net-c.ca>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/de/
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/fr/
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/it/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -228,4 +228,5 @@
     <string name="failed_to_parse_rss_feed">RSS-Feed konnte nicht analysiert werden</string>
     <string name="theme_e_ink">E-Papier</string>
     <string name="add_anyway">Trotzdem hinzufügen</string>
+    <string name="open_browser_in_split_screen">Browser öffnen in getrennten Bildschirm</string>
 </resources>
