--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -228,4 +228,5 @@
     <string name="no_url">URL manquante</string>
     <string name="theme_e_ink">Encre électronique</string>
     <string name="add_anyway">Ajouter quand même</string>
+    <string name="open_browser_in_split_screen">Ouvrir le navigateur dans un écran partagé</string>
 </resources>
