--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -228,4 +228,5 @@
     <string name="no_body_in_response">Nessun contenuto</string>
     <string name="theme_e_ink">Carta elettronica</string>
     <string name="add_anyway">Aggiungi comunque</string>
+    <string name="open_browser_in_split_screen">Apri il browser in schermata divisa</string>
 </resources>
