--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -229,4 +229,17 @@
     <string name="add_anyway">Přesto přidat</string>
     <string name="no_body_in_response">Žádné tělo v odpovědi</string>
     <string name="open_browser_in_split_screen">Otevření prohlížeče na rozdělené obrazovce</string>
+    <string name="show_reading_time">Zobrazit odhadovaný čas čtení</string>
+    <string name="many_words">%1$s slov</string>
+    <string name="other_minutes">%1$s minut</string>
+    <string name="few_minutes">%1$s minut</string>
+    <string name="two_words">%1$s slova</string>
+    <string name="many_minutes">%1$s minut</string>
+    <string name="zero_minutes">%1$s minut</string>
+    <string name="few_words">%1$s slov</string>
+    <string name="zero_words">%1$s slov</string>
+    <string name="one_minute">%1$s minuta</string>
+    <string name="two_minutes">%1$s minuty</string>
+    <string name="other_words">%1$s slov</string>
+    <string name="one_word">%1$s slovo</string>
 </resources>
