--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -230,4 +230,16 @@
     <string name="add_anyway">Lägg till ändå</string>
     <string name="open_browser_in_split_screen">Öppna webbläsare i delad skärm</string>
     <string name="show_reading_time">Visa uppskattad lästid</string>
+    <string name="many_words">%1$s ord</string>
+    <string name="other_minutes">%1$s minuter</string>
+    <string name="few_minutes">%1$s minuter</string>
+    <string name="two_words">%1$s ord</string>
+    <string name="many_minutes">%1$s minuter</string>
+    <string name="zero_minutes">%1$s minuter</string>
+    <string name="few_words">%1$s ord</string>
+    <string name="zero_words">%1$s ord</string>
+    <string name="one_minute">%1$s minut</string>
+    <string name="two_minutes">%1$s minuter</string>
+    <string name="other_words">%1$s ord</string>
+    <string name="one_word">%1$s ord</string>
 </resources>
