--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -227,4 +227,19 @@
     <string name="no_feeds_in_the_page">Sem feeds na página</string>
     <string name="max_lines">Linhas máximas</string>
     <string name="read_adjective">Ler</string>
+    <string name="show_reading_time">Mostrar tempo de leitura estimado</string>
+    <string name="many_words">%1$s palavras</string>
+    <string name="other_minutes">%1$s minutos</string>
+    <string name="few_minutes">%1$s minutos</string>
+    <string name="two_words">%1$s palavras</string>
+    <string name="many_minutes">%1$s minutos</string>
+    <string name="no_body_in_response">Nenhum corpo na resposta</string>
+    <string name="zero_minutes">%1$s minutos</string>
+    <string name="few_words">%1$s palavras</string>
+    <string name="zero_words">%1$s palavras</string>
+    <string name="one_minute">%1$s minuto</string>
+    <string name="open_browser_in_split_screen">Abrir o navegador em tela dividida</string>
+    <string name="two_minutes">%1$s minutos</string>
+    <string name="other_words">%1$s palavras</string>
+    <string name="one_word">%1$s palavra</string>
 </resources>
