--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -229,4 +229,17 @@
     <string name="open_browser_in_split_screen">Browser in gedeeld venster openen</string>
     <string name="failed_to_download">Download mislukt</string>
     <string name="content_is_not_html">Inhoud is geen HTML</string>
+    <string name="show_reading_time">Geschatte leestijd weergeven</string>
+    <string name="many_words">%1$s woorden</string>
+    <string name="other_minutes">%1$s minuten</string>
+    <string name="few_minutes">%1$s minuten</string>
+    <string name="two_words">%1$s woorden</string>
+    <string name="many_minutes">%1$s minuten</string>
+    <string name="zero_minutes">%1$s minuten</string>
+    <string name="few_words">%1$s woorden</string>
+    <string name="zero_words">%1$s woorden</string>
+    <string name="one_minute">%1$s minuut</string>
+    <string name="two_minutes">%1$s minuten</string>
+    <string name="other_words">%1$s woorden</string>
+    <string name="one_word">%1$s woord</string>
 </resources>
