--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -148,7 +148,7 @@
     <string name="qr_code">Code QR</string>
     <string name="feeder_device_sync_code">Code de synchronisation de l’appareil</string>
     <string name="leave_sync_chain">Quitter la chaîne de synchronisation</string>
-    <string name="device_sync_description_2">Scannez simplement le code de la chaîne de synchronisation que vous avez créée sur un autre appareil, ou de démarrer une nouvelle chaîne de synchronisation.</string>
+    <string name="device_sync_description_2">Il suffit de scanner le code de la chaîne de synchronisation que vous avez créée sur un autre appareil, ou de démarrer une nouvelle chaîne de synchronisation.</string>
     <string name="start_new_sync_chain">Démarrer une nouvelle chaîne</string>
     <string name="device_sync">Synchronisation de l’appareil</string>
     <string name="device_sync_description_1">La synchronisation des appareils vous permet de synchroniser les flux d\'abonnements et les articles lus entre vos différents appareils.</string>
