Updated Italian translation using Weblate
Currently translated at 100.0% (242 of 242 strings)

Co-authored-by: Francesco Saltori <francescosaltori@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/it/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -235,9 +235,9 @@
     <string name="few_minutes">%1$s minuti</string>
     <string name="two_words">%1$s parole</string>
     <string name="many_minutes">%1$s minuti</string>
-    <string name="zero_minutes">%1$s minuto</string>
+    <string name="zero_minutes">%1$s minuti</string>
     <string name="few_words">%1$s parole</string>
-    <string name="zero_words">%1$s parola</string>
+    <string name="zero_words">%1$s parole</string>
     <string name="one_minute">%1$s minuto</string>
     <string name="two_minutes">%1$s minuti</string>
     <string name="other_words">%1$s parole</string>
