Updated French translation using Weblate
Currently translated at 100.0% (243 of 243 strings)

Co-authored-by: Matth78 <Matth.Ferrier@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/fr/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -242,4 +242,5 @@
     <string name="two_minutes">%1$s minutes</string>
     <string name="other_words">%1$s mots</string>
     <string name="one_word">%1$s mot</string>
+    <string name="close_menu">Fermer le menu</string>
 </resources>
