Updated Spanish translation using Weblate
Currently translated at 100.0% (243 of 243 strings)

Co-authored-by: gallegonovato <fran-carro@hotmail.es>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/es/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -242,4 +242,5 @@
     <string name="two_minutes">%1$s minutos</string>
     <string name="other_words">%1$s palabras</string>
     <string name="one_word">%1$s palabra</string>
+    <string name="close_menu">Cerrar el menú</string>
 </resources>
