--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -242,4 +242,5 @@
     <string name="two_minutes">%1$s dakika</string>
     <string name="other_words">%1$s kelime</string>
     <string name="one_word">%1$s kelime</string>
+    <string name="close_menu">Menüyü kapat</string>
 </resources>
