Updated Ukrainian translation using Weblate
Currently translated at 100.0% (243 of 243 strings)

Co-authored-by: Сергій <sergiy.goncharuk.1@gmail.com>
Translate-URL: https://hosted.weblate.org/projects/feeder/android-strings/uk/
Translation: Feeder/Android strings

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -242,4 +242,5 @@
     <string name="two_minutes">%1$s хвилини</string>
     <string name="other_words">%1$s слів</string>
     <string name="one_word">%1$s слово</string>
+    <string name="close_menu">Закрити меню</string>
 </resources>
