--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -247,4 +247,5 @@
     <string name="failed_to_export_saved_articles">Kaydedilen makaleler dışa aktarılamadı</string>
     <string name="skip_duplicate_articles">Yinelenen makaleleri atla</string>
     <string name="skip_duplicate_articles_desc">Var olan makalelerle aynı bağlantılara veya başlıklara sahip makaleler göz ardı edilir</string>
+    <string name="feed_item_style_compact_card">Sıkı Kart</string>
 </resources>
