--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -261,7 +261,16 @@
   <string name="close_menu">Close menu</string>
   <string name="skip_duplicate_articles">Skip duplicate articles</string>
   <string name="skip_duplicate_articles_desc">Articles with links or titles identical to existing articles are ignored</string>
+  <string name="summarize">Summarize</string>
+  <string name="openai_settings">OpenAI integration</string>
+  <string name="api_key">API Key</string>
+  <string name="model_id">Model Id</string>
+  <string name="azure_api_version">Azure API version</string>
   <string name="touch_to_play_audio">Touch to play audio</string>
   <string name="title_unread_count" translatable="false">(%1$d)</string>
   <string name="show_title_unread_count">Show unread article count in title</string>
+  <string name="unable_to_load_models">Unable to load models.</string>
+  <string name="no_models_were_found">No models were found</string>
+  <string name="azure_deployment_id">Azure deployment id</string>
+  <string name="list_of_available_models">List of available models</string>
 </resources>
