--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -247,4 +247,5 @@
     <string name="failed_to_export_saved_articles">Falha ao exportar artigos salvos</string>
     <string name="skip_duplicate_articles">Ignorar artigos duplicados</string>
     <string name="skip_duplicate_articles_desc">Artigos com links ou títulos idênticos aos artigos existentes são ignorados</string>
+    <string name="feed_item_style_compact_card">Cartão Compacto</string>
 </resources>
