--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -75,7 +75,7 @@
     <string name="sync_option_every_6_hours">Cada 6 horas</string>
     <string name="sync_option_every_12_hours">Cada 12 horas</string>
     <string name="sync_option_every_day">A diario</string>
-    <string name="synchronization">A sincronizar</string>
+    <string name="synchronization">Sincronizar</string>
     <string name="syncing">A sincronizar</string>
     <string name="only_on_wifi">Só con Wi-Fi</string>
     <string name="show_thumbnails">Mostrar miniaturas</string>
@@ -83,7 +83,7 @@
     <string name="only_available_on_android_n">Só dispoñible para Android %1$s e superior</string>
     <string name="description_for_read_aloud">Detecta automaticamente o idioma do artigo</string>
     <string name="may_result_data_charges">Podería gastar datos do móbil.</string>
-    <string name="only_when_charging">Só mentres tanto</string>
+    <string name="only_when_charging">Só ao cargar batería</string>
     <string name="image_loading">A cargar imaxe</string>
     <string name="no_activity_for_link">Primeiro instala algo para abrir esta ligazón</string>
     <string name="check_for_updates">Comprobar novidades…</string>
